# ocaml-hamt

./: .gitignore  .merlin  .travis.yml  LICENSE  Makefile  _oasis  _tags  bitUtils.ml  dune-project  hamt-bench.opam  hamt.ml  hamt.mli  hamt.odocl  hamt.opam
.github/workflows/: workflow.yml
bench/: bench.ml  dune
benchmarks/: guerre_et_paix.txt  param.ml  test.ml
lib/: bitUtils.ml  bitUtils.mli  dune  hamt.ml  hamt.mli
lib_test/: bench1.ml  chap1.txt  chap2.txt  compte.mll  dune  hamt_tests.ml  param.ml  test.ml
lib_test/inline/: dune  hamt_tests.ml
src/: bitUtils.ml  hamt.ml  hamt.mli
tests/: chap3.txt  compte.mll  histoire_de_la_marine_francaise.txt  param.ml  test.ml
