(test
 (name test)
 (modules test)
 (libraries hamt stdlib-shims))

(test
 (name bench1)
 (modules bench1)
 (libraries hamt core core_bench))

(test
 (name param)
 (modules param)
 (action
  (run %{test} hamt 1 add find --arch64=%{arch_sixtyfour}))
 (libraries hamt))

(ocamllex compte)

(test
 (name compte)
 (modules compte)
 (deps chap1.txt chap2.txt)
 (action
  (run %{test} %{deps} 20))
 (libraries hamt))
